--- a/style.css
+++ b/style.css
@@ -2,22 +2,46 @@ body {
     margin: 0px;
     padding: 0px;
     font-size: 1vw;
+    font-weight: bold;
+    letter-spacing: 2px;
 }
 
 .header_main h1 {
     margin: 0;
     margin-top: 10px;
+}
+
+.header_main p {
+    margin: 0%;
     letter-spacing: 5px;
+    margin-bottom: 2px;
 }
 
 .header_main {
     text-align: left;
+
 }
 
 .header_contents {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+}
+
+.list {
+    list-style: none;
+    padding-right: 90px;
+}
+
+.list li {
+    width: 160px;
+    text-align: end;
+    display: inline-block;
+}
+.list li a {
+    text-decoration: none;
+    color: black;
 }
 
 header {
@@ -29,4 +53,15 @@ header {
     height: 30vw;
     margin-bottom: 50px;
 }
+
+.header_photo {
+    height: 30vw;
+    width: 100%;
+    object-fit: cover;
+}
+
+.heading_1 {
+    padding: 10px;
+}
+
 
